[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/floor/grass.png" type="Texture" id=1]
[ext_resource path="res://scenes/surface_scene/script/Surface.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/death/Mort_1.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Surface" type="Node2D"]
script = ExtResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="WaveTimer" type="Timer" parent="."]

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
centered = false
vframes = 2

[node name="anim" type="AnimationPlayer" parent="Grass"]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Grass2" type="Sprite" parent="."]
position = Vector2( -256, -32 )
texture = ExtResource( 1 )
centered = false
vframes = 2

[node name="anim" type="AnimationPlayer" parent="Grass2"]
autoplay = "idle"
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
